[project]
name = "langgraph-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=26.3.1",
    "certifi>=2026.2.25",
    "isort>=8.0.1",
    "langchain>=1.2.14",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.12",
    "langchain-tavily>=0.2.17",
    "langchian>=0.2.5",
    "langgraph>=1.1.4",
    "python-dotenv>=1.2.2",
]
